<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/inp_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:text="@string/nama"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nama" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_alamat" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_kampus" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kampus" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inp_form"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/diazs" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/diazs" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/diazs" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pic"
        android:layout_margin="15dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_kembali"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:background="#F10000"
            android:text="@string/kembali" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:layout_toRightOf="@+id/btn_kembali"
            android:background="#5FF303"
            android:text="@string/next" />
    </RelativeLayout>

</RelativeLayout>